subimos la carpeta WWW

--- a/WWW/index.html
+++ b/WWW/index.html
@@ -1,11 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bienvenido a mi pagina web</title>
 </head>
 <body>
+    <marquee> <u><i><b>Hola soy una marquesina</b></i></u> </marquee>
     <h1>Hola a mi servidor http</h1>
+    <h2>Hola a mi servidor http</h2>
+    <h3>Hola a mi servidor http</h3>
+    <h4>Hola a mi servidor http</h4>
+    <h5>Hola a mi servidor http</h5>
+    <h6>Hola a mi servidor http</h6>
+    <a href="ventas.html">Ir a ventas</a>
+    <a href="https://www.google.com">Ir a google</a>
+    <p>Hola a mi <u>parrafo escrito en html</u></p>
+    <ul>
+        <li>leche</li>
+        <li>tomate</li>
+        <li>limones</li>
+    </ul>
+
+    <ol>
+        <li><i>Alvares Perez</i> <b>David</b></li>
+        <li><i>Bustillos Sandoval</i>  <b>Moises</b></li>
+        <li><i>Casares Corral</i>  <b>Oscar</b></li>
+    </ol>
+<center>
+    <table>
+        <thead>
+            <tr>
+                <th>Matricula</th>
+                <th>Nombre</th>
+                <th>Calificaciones</th>
+
+            </tr>
+        
+        </thead>
+        <tbody>
+            <tr>
+                <td>361352</td>
+                <td>Bustillos Sandoval Moises</td>
+                <td>10</td>
+            </tr>
+            <tr>
+                <td>361380</td>
+                <td>Perez Lopez Pedro</td>
+                <td>6.9</td>
+            </tr>
+        </tbody>
+    </table>
+</center>
+
+<img src="/images/logo.png">
+
+    <form action="/registro" method="post">
+        <label for="Nombre">Nombre</label>
+        <input id="Nombre" type="text" name="Nombre">
+        <label for="Apellido">Apellido</label>
+        <input id="Apellido"type="text" name="Apellido">
+        <input type="submit">
+    </form>
+
 </body>
 </html>
